--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 
 <head>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <title>CruzeiroTV</title>
 </head>
 
@@ -9,8 +12,8 @@
 
     <header>CRUTV</header>
 
-    <section>
-        <div>
+    <section class="chamada">
+        <div class="chamada-texto">
             <h1>CRUZEIRO AVANÇA PARA A FINAL DA SULA!</h1>
             <P>#Cruzeiro</P>
         </div>
@@ -23,6 +26,27 @@
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
+
+  <section class="categoria">
+    <h2>Jogos e mais</h2>
+    <div class="categoria-videos">
+        <a href="https://www.youtube.com/watch?v=FQt774tDbsM">
+         <img src="https://i3.ytimg.com/vi/FQt774tDbsM/maxresdefault.jpg" />
+        </a>
+        <a href="https://www.youtube.com/watch?v=2h5Zppi6lLQ">
+          <img src="https://i3.ytimg.com/vi/2h5Zppi6lLQ/maxresdefault.jpg" />
+        </a>
+        <a href="https://www.youtube.com/watch?v=RpSKy4lK5Jw">
+          <img src="https://i3.ytimg.com/vi/RpSKy4lK5Jw/maxresdefault.jpg" />
+         </a>
+         <a href="https://www.youtube.com/watch?v=EvrzQIMiVz8">
+          <img src="https://i3.ytimg.com/vi/EvrzQIMiVz8/maxresdefault.jpg" />
+         </a>
+         <a href="https://www.youtube.com/watch?v=qokJNfcUWeg">
+          <img src="https://i3.ytimg.com/vi/qokJNfcUWeg/maxresdefault.jpg" />
+         </a>
+    </div>
+  </section>
 
 </body>
 
